Modificacion visual pagina web

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MyGPU</title>
-    <link href="css/estilos.css" rel="stylesheet" />
-    <script src="js/script.js"></script>
+    <title>EGO BATTLE</title>
+    <link href="styles.css" rel="stylesheet" />
+    <script src="js/main.js"></script>
 
 </head>
 <body>
@@ -22,30 +22,12 @@
         </nav>
 
     </header>
-    <h1 class="titulo"> GPU´S DE ÚLTIMA GENERACIÓN </h1>
-    <button onclick="CambiaColor('text')">Cambiar color</button>
-    <a href="https://www.nvidia.com/es-es/geforce/graphics-cards/40-series/" ta_blank>
-        <h2 class="titulo2">NVIDIA</h2>
+    <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
+        <p>@Bl4ckHoleGames</p>
     </a>
-    <div>
-        <p class="texto" id="text">NVIDIA GeForce RTX impulsa las GPU más rápidas del mundo y la plataforma definitiva para jugadores y creadores. Disfruta de trazado de rayos espectaculares, DLSS con tecnología de IA y mucho más en juegos y aplicaciones, desde tu ordenador de sobremesa, tu portátil, en la nube o desde tu salón.</p>
-        <img class=clase id="4090" src="img/4090.jpg"> <img />
+        <h1 class="titulo"> EGO BATTLE </h1>
         <div>
-            <button onclick="document.getElementById('4090').style.visibility = 'hidden'">Eliminar</button>
-            <button onclick="document.getElementById('4090').style.visibility = 'visible' ">Aparecer</button>
+            <p class="titulo1">Descripcion:</p>
+            <p class="texto" id="text">Enfrentate a tus amigos en este videojuego de lucha JcJ, elige el personaje que más se adapte a tu personalidad y estilo de juego y diviertete.</p>
         </div>
-
-    </div>
-    <button onclick="CambiaColor('text1')">Cambiar color</button>
-    <a href="https://www.amd.com/en/graphics/radeon-rx-graphics" ta_blank>
-        <h2 class="titulo1">AMD</h2>
-    </a>
-    <div>
-        <p class="texto" id="text1">Break through new levels of performance with up to 24 GB of GDDR6 memory and blazing fast clock speeds for an incredible gaming experience. Radeon™ RX 7000 Series graphics feature advanced AMD RDNA™ 3 compute units, with second-generation raytracing accelerators and new AI accelerators to deliver remarkable performance while maximizing graphical fidelity.</p>
-        <img class=clase id="7900" src="img/7900.jpg"> <img />
-        <button onclick="document.getElementById('7900').style.visibility = 'hidden'">Eliminar</button>
-        <button onclick="document.getElementById('7900').style.visibility = 'visible' ">Aparecer</button>
-    </div>
-    <div>
-        <button onclick="alert(DevuelveAlerta())">Info</button>
-    </div>
+</body>
