Inicializacion de phaser

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EGO BATTLE</title>
     <link href="styles.css" rel="stylesheet" />
-    <script src="js/main.js"></script>
-
+    <script src="game.js" type="module"></script>
+    <script src="lib/phaser.js"></script>
 </head>
 <body>
-
+   
     <header>
         <nav>
             <a href="#">Inicio</a>
@@ -25,9 +25,9 @@
     <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
         <p>@Bl4ckHoleGames</p>
     </a>
-        <h1 class="titulo"> EGO BATTLE </h1>
-        <div>
-            <p class="titulo1">Descripcion:</p>
-            <p class="texto" id="text">Enfrentate a tus amigos en este videojuego de lucha JcJ, elige el personaje que más se adapte a tu personalidad y estilo de juego y diviertete.</p>
-        </div>
+    <h1 class="titulo"> EGO BATTLE </h1>
+    <div>
+        <p class="titulo1">Descripcion:</p>
+        <p class="texto" id="text">Enfrentate a tus amigos en este videojuego de lucha JcJ, elige el personaje que más se adapte a tu personalidad y estilo de juego y diviertete.</p>
+    </div>
 </body>
