--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>EGO BATTLE</title>
     <link href="styles.css" rel="stylesheet" />
     <script src="game.js" type="module"></script>
+    <script src="mainScene.js" type="module"></script>
     <script src="lib/phaser.js"></script>
 </head>
 <body>
