--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="styles.css" rel="stylesheet" />
     <script src="game.js" type="module"></script>
     <script src="mainScene.js" type="module"></script>
+    <script src="mainMenu.js" type="module"></script>
     <script src="lib/phaser.js"></script>
 </head>
 <body>
