Primer commit icono de instagram

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </header>
     <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
-        <p>@Bl4ckHoleGames</p>
+        <img src = "img/Instagram-Icon.png"></img>
     </a>
     <h1 class="titulo"> EGO BATTLE </h1>
     <div>
