--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EGO BATTLE</title>
-    <link href="styles.css" rel="stylesheet" />
-    <script src="game.js" type="module"></script>
-    <script src="mainScene.js" type="module"></script>
-    <script src="mainMenu.js" type="module"></script>
+    <link href="src/styles.css" rel="stylesheet" />
+    <script src="src/game.js" type="module"></script>
+    <script src="src/mainScene.js" type="module"></script>
+    <script src="src/mainMenu.js" type="module"></script>
     <script src="lib/phaser.js"></script>
 </head>
 <body>
@@ -25,11 +25,12 @@
 
     </header>
     <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
-        <img src = "img/Instagram-Icon.png"></img>
+        <img src = "assets/img/Instagram-Icon.png"></img>
     </a>
     <h1 class="titulo"> EGO BATTLE </h1>
     <div>
         <p class="titulo1">Descripcion:</p>
-        <p class="texto" id="text">Enfrentate a tus amigos en este videojuego de lucha JcJ, elige el personaje que más se adapte a tu personalidad y estilo de juego y diviertete.</p>
+        <p class="texto" id="text">Enfréntate a tus amigos en este juego de lucha JcJ, elige el personaje que más se adapte a tu personalidad y estilo de juego y diviértete.</p>
+
     </div>
 </body>
