--- a/index.html
+++ b/index.html
@@ -11,26 +11,48 @@
     <script src="src/mainScene.js" type="module"></script>
     <script src="src/mainMenu.js" type="module"></script>
     <script src="lib/phaser.js"></script>
+    <script defer src="src/htmlController.js"></script>
 </head>
 <body>
-   
-    <header>
-        <nav>
-            <a href="#">Inicio</a>
-            <a href="#">Acerca de</a>
-            <a href="#">Portafolio</a>
-            <a href="#">Servivios</a>
-            <a href="#">Contacto</a>
-        </nav>
 
-    </header>
     <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
-        <img src = "assets/img/Instagram-Icon.png"></img>
+        <img src="assets/img/Instagram-Icon.png" />
     </a>
     <h1 class="titulo"> EGO BATTLE </h1>
+
+    <div class="contenedor">
+        <ul class="ul">
+            <li class="li activo"> Juego</li>
+            <li class="li"> Controles y objetivos</li>
+            <li class="li"> Descripcion</li>
+            <li class="li"> Autores</li>
+        </ul>
+
+        <div class="subcontenedor">
+            <div class="bloque activo">
+                <div id='juego'></div>
+            </div>
+            <div class="bloque">
+                <img class="imagen" src="assets/img/teclado.jpg">
+                <p class="texto" id="text">Jugador 1(Rojo)- AD para moverse, W para saltar, G-H para atacar</p>
+                <p class="texto" id="text">Jugador 2(Azul)- Flechas para moverse, Flecha arriba para saltar, P-O para atacar</p>
+            </div>
+            <div class="bloque">
+                <p class="titulo1">Descripcion:</p>
+                <p class="texto" id="text">Bienvenido a nuestro proyecto universitario Ego-Battle, un juego de pelea con plataformas. Es un juego multijugador en local donde los jugadores deben elegir entre 4 personajes con diferentes personalidades para combatir con ellos. Cada personaje tiene dos tipos de ataque, una barra de vida y una barra de poder que se va llenando en función de su personalidad.</p>
+            </div>
+            <div class="bloque">
+                <p class="texto" id="text">Jefe de equipo: Sergio Pérez Robledano</p>
+                <p class="texto" id="text">Jefe de programación: David Rubio Moreno</p>
+                <p class="texto" id="text">CEO/Comunity manager: Javier Bravo Perucho</p>
+                <p class="texto" id="text">Jefe de empresa: Álvaro Vergara Fernández</p>
+            </div>
+        </div>
+    </div>
+
+
     <div>
-        <p class="titulo1">Descripcion:</p>
-        <p class="texto" id="text">Enfréntate a tus amigos en este juego de lucha JcJ, elige el personaje que más se adapte a tu personalidad y estilo de juego y diviértete.</p>
+        
 
     </div>
 </body>
