Ajuste pagina web

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
-        <img src="assets/img/Instagram-Icon.png" />
+        <img class ="logo" src="assets/img/Instagram-Icon.png" />
     </a>
     <h1 class="titulo"> EGO BATTLE </h1>
 
