--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li class="li"> Controles y objetivos</li>
             <li class="li"> Descripcion</li>
             <li class="li"> Autores</li>
+            <li class="li"> Historia</li>
         </ul>
 
         <div class="subcontenedor">
@@ -46,6 +47,18 @@
                 <p class="texto" id="text">Jefe de programación: David Rubio Moreno</p>
                 <p class="texto" id="text">CEO/Comunity manager: Javier Bravo Perucho</p>
                 <p class="texto" id="text">Jefe de empresa: Álvaro Vergara Fernández</p>
+
+            </div>
+            <div class="bloque">
+                <p class="titulo1">BackGround:</p>
+                <p class="texto" id="text">Hace milenios, en un mundo misterioso y lleno de magia, las fuerzas elementales dominaban la tierra. Cuatro poderosas facciones se alzaron, cada una controlando uno de los elementos: fuego, agua, tierra, aire y una personalidad: agresividad, introversión, meticulosidad, egoismo. Cada facción estaba liderada por un campeón legendario: el Mago del Fuego, el Rey de las Aguas, el Ninja de la Tierra y el Luchador del Aire. Juntos, estos campeones mantenían el equilibrio en el mundo y garantizaban la paz.</p>
+                <p class="texto" id="text">Sin embargo, la ambición y la codicia amenazaron el equilibrio elemental. El Rey de las Aguas, en su búsqueda de más poder, provocó una catastrófica erupción volcánica que devastó la jungla circundante. El Mago del Fuego, indignado por la destrucción, desató una tormenta de fuego que arrasó con una ciudad portuaria. El Ninja de la Tierra, al ver la devastación causada por ambos, juró venganza y se sumió en las sombras.</p>
+                <p class="texto" id="text">
+                    El mundo estaba al borde del caos total, y los cuatro campeones se enfrentaron en un conflicto épico. Pero antes de que la destrucción total se hiciera realidad, un sabio anciano con un conocimiento profundo de los elementos intervino. Propuso una solución: un torneo que decidiría el destino del mundo. Los cuatro campeones se unirían en una competencia de lucha en una variedad de escenarios, cada uno representando una personalidad y a uno de los elementos en disputa: la jungla para la Tierra, el volcán para el Fuego, el muelle para el Agua, el espacio para el Aire y el castillo como símbolo del equilibrio.
+                </p>
+                <p class="texto" id="text">El torneo fue anunciado y convocó a luchadores de todas partes del mundo, todos ansiosos por demostrar su valía en la arena. Cada campeón elemental eligió a su propio equipo, y ahora, en medio de un torneo lleno de magia, combates emocionantes y estrategias astutas, estos líderes compiten por el destino del mundo y el control sobre los elementos mostrando cuál de sus personalidades será la vencedora.</p>
+                <p class="texto" id="text">En "Ego Battle" los jugadores pueden tomar el control de uno de los cuatro campeones y unirse a la lucha en los diversos escenarios elementales, cada uno con sus propias trampas y desafíos. ¿Quién prevalecerá y restaurará el equilibrio en el mundo? La respuesta yace en manos de los jugadores y su habilidad para dominar a las personalidades de los campeones en la batalla.</p>
+
             </div>
         </div>
     </div>
