--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="src/game.js" type="module"></script>
     <script src="src/mainScene.js" type="module"></script>
     <script src="src/mainMenu.js" type="module"></script>
-    <script src="lib/phaser.js"></script>
+    <script src="src/lib/phaser.js"></script>
     <script defer src="src/htmlController.js"></script>
 </head>
 <body>
