Github Pages prueba

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="htmlAssets/favicon.ico">
     <link href="src/html/styles.css" rel="stylesheet" />
     <script src="src/lib/phaser.js"></script>
     <title>EGO BATTLE</title>
@@ -12,7 +12,7 @@
 <body>
 
     <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
-        <img class ="logo" src="assets/img/Instagram-Icon.png" />
+        <img class ="logo" src="htmlAssets/Instagram-Icon.png" />
     </a>
     <h1 class="titulo"> EGO BATTLE </h1>
 
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="bloque">
-                <img class="imagen" src="assets/img/teclado.jpg">
+                <img class="imagen" src="htmlAssets/teclado.jpg">
                 <p class="texto" id="text">Jugador 1(Rojo)- AD para moverse, W para saltar, G-H para atacar</p>
                 <p class="texto" id="text">Jugador 2(Azul)- Flechas para moverse, Flecha arriba para saltar, P-O para atacar</p>
             </div>
