--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <a href="https://www.instagram.com/bl4ckholegames/" ta_blank>
-        <img class ="logo" src="assets/img/Instagram-Icon.png" />
+        <img class ="logo" src="htmlAssets/Instagram-Icon.png" />
     </a>
     <h1 class="titulo"> EGO BATTLE </h1>
 
@@ -27,7 +27,7 @@
 
         <div class="subcontenedor">
             <div class="bloque">
-                <img class="imagen" src="assets/img/teclado.jpg">
+                <img class="imagen" src="htmlAssets/teclado.jpg">
                 <p class="textoRojo">Jugador 1- A y D para moverse, W para saltar, G y H para atacar</p>
                 <p class="textoAzul">Jugador 2- Flechas para moverse, Flecha arriba para saltar, P y O para atacar</p>
             </div>
