--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="htmlAssets/favicon.ico">
     <link href="src/html/styles.css" rel="stylesheet" />
     <script src="src/lib/phaser.js"></script>
     <title>EGO BATTLE</title>
