Informacion crucial sobre el desarrollo del proyecto

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="texto" id="text">Jefe de equipo: Sergio Pérez Robledano</p>
                 <p class="texto" id="text">Jefe de programación: David Rubio Moreno</p>
                 <p class="texto" id="text">CEO/Comunity manager: Javier Bravo Perucho</p>
-                <p class="texto" id="text">Jefe de empresa: Álvaro Vergara Fernández</p>
+                <p class="texto" id="text">Jefe de empresa: Álvaro Vergara Fernández (No aguanto la presión y decidió dejar la carrera para dedicarse a su gran pasión, tocar la viola)</p>
 
             </div>
             <div class="bloque" style="overflow-y:auto;">
